2013-12-15 Jens Thoms Toerring    <jt@toerring.de>

	* A number of further tweaks to the build system to make
	sure that it also works on older systens (tested CentOS 5)
	applied. An installed version of libtool is now required
	for generating the package from scratch (i.e. with the
	'autogen.sh' script).
	* A few things related to the build system issues in
	fdesign have been fixed.

2013-12-13 Jens Thoms Toerring    <jt@toerring.de>

	* Bug fixes in fdesign: Some xpm files weren't read in
	and editing choice/menu/browser object attributes could
	crash the program
	* Changes to build system to avoid recompilations on
	install
	* Clean-up of code after check with clang static
	analyzer

2013-12-09 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Applied a patch Serge Bromow created to
	add a '-migrate' option to fdesign
	* Thanks to a suggestion from David Binderman all
	code was checked with the 'cppcheck' static
	checking tool, which resulted in finding several
	bugs and improvements in the code with respect to
	readability.

2013-12-04 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Minor display bug reported by Segre Bromow fixed
	* docs: Thanks to Michal Szymanski PDF documentation can now
	also be build on systems with older texi2dvi versions
	* Clean-up: Several functions declared in public header
	files but which were either not present or only meant for
	internal use removed, other functions documented.

2013-12-01 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c: Bug fix in fl_set_obkject_resize()
	* fdesign: Several bug fixes
	* build system: Fixes for creation of documentation to
	allow build with older texi2dvi versions

2013-11-25 Jens Thoms Toerring    <jt@toerring.de>

	* Bug fixes and documentation update for new
	1.0.94pre22 pre-release.

2013-11-23 Jens Thoms Toerring    <jt@toerring.de>

	* lib: for quite a number of functions taking a string
	as their last argument there's now another version